    - added dialect flag "auto_convert_lobs", defaults to True; will cause any 
      LOB objects detected in a result set to be forced into OracleBinary
      so that the LOB is read() automatically, if no typemap was present
      (i.e., if a textual execute() was issued).
- postgres
    - fixed escaping of the modulo operator [ticket:624]
- sqlite
    - sqlite better handles datetime/date/time objects mixed and matched
      with various Date/Time/DateTime columns
    - string PK column inserts dont get overwritten with OID [ticket:603] 
- extensions
    - added selectone_by() to assignmapper
    
0.3.8
- engines
  - added detach() to Connection, allows underlying DBAPI connection
    to be detached from its pool, closing on dereference/close()
    instead of being reused by the pool.
  - added invalidate() to Connection, immediately invalidates the
    Connection and its underlying DBAPI connection.
- sql
  - _Label class overrides compare_self to return its ultimate
    object. meaning, if you say someexpr.label('foo') == 5, it
    produces the correct "someexpr == 5".
  - _Label propigates "_hide_froms()" so that scalar selects
    behave more properly with regards to FROM clause #574 
  - fix to long name generation when using oid_column as an order by
    (oids used heavily in mapper queries)
  - significant speed improvement to ResultProxy, pre-caches
    TypeEngine dialect implementations and saves on function calls
    per column
  - parenthesis are applied to clauses via a new _Grouping
    construct. uses operator precedence to more intelligently apply
    parenthesis to clauses, provides cleaner nesting of clauses
    (doesnt mutate clauses placed in other clauses, i.e. no 'parens'
    flag)
  - added 'modifier' keyword, works like func.<foo> except does not
    add parenthesis.  e.g. select([modifier.DISTINCT(...)]) etc.
  - removed "no group by's in a select thats part of a UNION"
    restriction [ticket:578]
- orm